--- a/client/index.html
+++ b/client/index.html
@@ -106,4 +106,11 @@
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
+<footer class="footer">
+  <div class="container">
+      <p>
+        <a href="/">Home</a> |
+        <a href="https://github.com/anypath/declareIt/issues">Issues</a></p>
+  </div>
+</footer>
 </html>
