--- a/client/app/item/item.html
+++ b/client/app/item/item.html
@@ -12,7 +12,7 @@
 
   <form class="thing-form">
     <div class="form-group">
-      <label>User: {{ item.user }}</label>
+      <label>Uuid: {{ item.uuid }}</label>
     </div>
     <div class="form-group">
       <label>Info: {{ item.info }}</label>
@@ -25,8 +25,20 @@
       <label>Hashes: {{ item.hashes }}</label>
     </div>
     <div class="form-group">
-      <label>Data:</label>
-      <pre ng-bind-html="item.data" />
+      <label>Image Data:</label>
+      <pre ng-bind-html="item.imgInfo" />
+    </div>
+    <div class="form-group">
+      <label>Crypto Data:</label>
+      <pre ng-bind-html="item.cryptInfo" />
+    </div>
+    <div class="form-group">
+      <label>Entry Data:</label>
+      <pre ng-bind-html="item.entryInfo" />
+    </div>
+    <div class="form-group">
+      <label>Rep Data:</label>
+      <pre ng-bind-html="item.repInfo" />
     </div>
   </form>
 </div>
