--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,61 +1,76 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
-
 <div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Login</h1>
-      <p ng-show="false">Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
-      <p ng-show="false">Admin account is <code>admin@admin.com</code> / <code>admin</code></p>
+  <section id="signin_alt" class="authenty signin-alt" style="padding-bottom: 30px;
+  margin-bottom: 90px; margin-top: 60px;">
+    <div class="section-content" style="padding-top: 50px;">
+      <div class="wrap">
+        <div class="container">
+          <div class="row animated fadeInUp" data-animation="fadeInUp">
+            <div class="col-md-4 col-md-offset-1">
+              <div class="normal-signin">
+                <div class="title">
+                  <h3>Sign In</h3>
+                </div>
+                <div class="form-main">
+                  <form class="form" name="form" ng-submit="login(form)" novalidate>
+                    <div class="form-group">
+                      <div class="un-wrap">
+                        <i class="fa fa-user"></i>
+                        <input type="email" class="form-control" ng-model="user.email" placeholder="Email" required="required">
+                      </div>
+                      <div class="pw-wrap">
+                        <i class="fa fa-lock"></i>
+                        <input type="password" class="form-control" ng-model="user.password" placeholder="Password" required="required">
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="checkbox">
+                            <label>
+                              <input type="checkbox"> Remember me
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group has-error">
+                        <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
+                          Please enter your email and password.
+                        </p>
+                        <p class="help-block" ng-show="form.email.$error.email && submitted">
+                          Please enter a valid email.
+                        </p>
+                        <p class="help-block">{{ errors.other }}</p>
+                      </div>
+                      <div class="row top-buffer">
+                        <div class="col-md-4">
+                          <button type="submit" class="btn btn-block signin">Sign In</button>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="horizontal-divider"></div>
+            </div>
+            <div class="col-md-4">
+              <div class="sns-signin">
+                <a href="#" class="facebook"><i class="fa fa-facebook"></i><span>Sign in with Facebook</span></a>
+                <a href="#" class="ripple"><i class="fa fa-ripple"></i><span style="display: block; margin-left: 115px;">Sign in with Ripple</span></a>
+                <a href="#" class="google-plus"><i class="fa fa-google-plus"></i><span>Sign in with Google+</span></a>
+              </div>
+            </div>
+            <div class="col-md-1"></div>
+          </div>
+          <div class="row top-buffer bottom-wrap">
+            <div class="col-xs-6 col-md-2 col-md-offset-1">
+              <a href="#password_recovery" id="forgot_from_2">need help?</a>
+            </div>
+            <div class="col-xs-6 col-md-2">
+              <a ng-href="/signup" id="signup_from_2">Create an account</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="login(form)" novalidate>
-
-        <div class="form-group">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="user.email" required>
-        </div>
-
-        <div class="form-group">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="user.password" required>
-        </div>
-
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
-             Please enter your email and password.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.email && submitted">
-             Please enter a valid email.
-          </p>
-
-          <p class="help-block">{{ errors.other }}</p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
-          </button>
-          <a class="btn btn-default btn-lg btn-register" href="/signup">
-            Register
-          </a>
-        </div>
-
-        <hr>
-        <div>
-          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-            <i class="fa fa-facebook"></i> Connect with Facebook
-          </a>
-          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
-            <i class="fa fa-google-plus"></i> Connect with Google+
-          </a>
-          <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')">
-            <i class="fa fa-twitter"></i> Connect with Twitter
-          </a>
-        </div>
-      </form>
-    </div>
-  </div>
-  <hr>
+  </section>
 </div>
