--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,82 +1,78 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
-
 <div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Sign up</h1>
-    </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="register(form)" novalidate>
-
-        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
-                                            'has-error': form.name.$invalid && submitted }">
-          <label>Name</label>
-
-          <input type="text" name="name" class="form-control" ng-model="user.name"
-                 required/>
-          <p class="help-block" ng-show="form.name.$error.required && submitted">
-            A name is required
-          </p>
+    <section id="signup_window" class="authenty signup-window" style="padding-bottom: 30px;
+  margin-bottom: 90px; margin-top: 60px;">
+        <div class="section-content">
+            <div class="wrap">
+                <div class="container">
+                    <div class="row form-wrap">
+                        <div class="title">
+                            <h3>Create an account</h3>
+                        </div>
+                        <div class="col-xs-12 col-sm-5 col-md-4 col-md-offset-1">
+                            <div class="sns-signin">
+                                <a class="btn btn-primary" href="" ng-click="loginOauth('facebook')">
+                                    <i class="fa fa-facebook" style="padding: 10px 0px 20px 7px;"></i><span class="span-facebook">Sign in via Facebook</span></a>
+                                <br />
+                                <a href="#" class="ripple" ng-click="loginOauth('ripple')"><i class="fa fa-ripple"></i><span>Sign up with Ripple</span></a>
+                                <br />
+                                <a class="btn btn-primary google-plus" href="" ng-click="loginOauth('google')">
+                                    <i class="fa fa-google-plus" style="padding: 10px 0px 20px 7px;"></i><span class="span-facebook">Sign in via Google+</span></a>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-2 col-sm-1">
+                            <div class="horizontal-divider"></div>
+                        </div>
+                        <form class="form" name="form" ng-submit="register(form)" novalidate>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="normal-signup">
+                                    <div class="form-group" ng-class="{
+                                          'has-success': form.name.$valid && submitted,
+                                          'has-error': form.name.$invalid && submitted }">
+                                        <input type="text" class="form-control" placeholder="Name" required="required" ng-model="user.name" name="name" />
+                                        <p class="help-block" ng-show="form.name.$error.required && submitted">
+                                            A name is required
+                                        </p>
+                                    </div>
+                                    <div class="form-group" ng-class="{
+                                          'has-success': form.email.$valid && submitted,
+                                          'has-error': form.email.$invalid && submitted }">
+                                        <input type="email" class="form-control" placeholder="Email" required="required" ng-model="user.email" name="email" mongoose-error>
+                                        <p class="help-block" ng-show="form.email.$error.email && submitted">
+                                            Doesn't look like a valid email.
+                                        </p>
+                                        <p class="help-block" ng-show="form.email.$error.required && submitted">
+                                            What's your email address?
+                                        </p>
+                                        <p class="help-block" ng-show="form.email.$error.mongoose">
+                                            {{ errors.email }}
+                                        </p>
+                                    </div>
+                                    <div class="form-group" ng-class="{
+                                          'has-success': form.password.$valid && submitted,
+                                          'has-error': form.password.$invalid && submitted }">
+                                        <input type="password" class="form-control" placeholder="Password" ng-model="user.password" name="password" ng-minlength="3" required mongoose-error>
+                                        <p class="help-block" ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">
+                                            Password must be at least 3 characters.
+                                        </p>
+                                        <p class="help-block" ng-show="form.password.$error.mongoose">
+                                            {{ errors.password }}
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <a ng-show="false" ng-href="/password_recovery" id="forgot_from_3">need help?</a>
+                                    </div>
+                                    <div class="col-md-5 col-md-offset-7">
+                                        <button type="submit" class="btn btn-block signup">Sign Up</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="form-group" ng-class="{ 'has-success': form.email.$valid && submitted,
-                                            'has-error': form.email.$invalid && submitted }">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="user.email"
-                 required
-                 mongoose-error/>
-          <p class="help-block" ng-show="form.email.$error.email && submitted">
-            Doesn't look like a valid email.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.required && submitted">
-            What's your email address?
-          </p>
-          <p class="help-block" ng-show="form.email.$error.mongoose">
-            {{ errors.email }}
-          </p>
-        </div>
-
-        <div class="form-group" ng-class="{ 'has-success': form.password.$valid && submitted,
-                                            'has-error': form.password.$invalid && submitted }">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="user.password"
-                 ng-minlength="3"
-                 required
-                 mongoose-error/>
-          <p class="help-block"
-             ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">
-            Password must be at least 3 characters.
-          </p>
-          <p class="help-block" ng-show="form.password.$error.mongoose">
-            {{ errors.password }}
-          </p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Sign up
-          </button>
-          <a class="btn btn-default btn-lg btn-register" href="/login">
-            Login
-          </a>
-        </div>
-
-        <hr>
-        <div>
-          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-            <i class="fa fa-facebook"></i> Connect with Facebook
-          </a>
-          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
-            <i class="fa fa-google-plus"></i> Connect with Google+
-          </a>
-          <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')">
-            <i class="fa fa-twitter"></i> Connect with Twitter
-          </a>
-        </div>
-      </form>
-    </div>
-  </div>
-  <hr>
+    </section>
 </div>
